# RFSoC-RIDF-Analyzer

./: CMakeLists.txt  README.md
include/: LinkDef.h  ModuleAbst.h  ModuleC16.h  ModuleFIT.h  ModuleMADC.h  ModuleV1290.h  ModuleV7XX.h  RIDFParser.h  RIDFPull.h  WaveformAnalysis.h  ridf.h
include/nlohmann/: json.hpp
src/: ModuleAbst.cpp  ModuleC16.cpp  ModuleFIT.cpp  ModuleMADC.cpp  ModuleV1290.cpp  ModuleV7XX.cpp  RIDFParser.cpp  RIDFPull.cpp  WaveformAnalysis.cpp  analyze_waveforms.cpp  export_waveforms.cpp  rfsoc_ridf_analyzer.cpp
tools/: README.md  babiconjson_client.py  online_take_and_save.py  tmux_rf.sh  update_rfsoc_conf.sh
